Add year labels to years with a blue moon
* Add a margin around the body
* Add two placeholder paragraphs describing the two different kinds
  of blue moons
* Add a mixin that implements the d3 margin convention
* Mixin the margin convention to the MoonPhases chart
* Add labels for all years that have at least one blue moon

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
         <![endif]-->
 
         <h1>Once in a Blue Moon</h1>
+        <p>The second full moon in a month.</p>
+        <p>The third full moon in a season with four full moons.</p>
         <div>
           <svg id="moons"></svg>
         </div>
